Fix mobile by making pre text wrap

--- a/public/style.css
+++ b/public/style.css
@@ -62,6 +62,8 @@ pre {
     color: grey;
     background-color: black;
     padding: 0.25em;
+
+    white-space: pre-wrap;
 }
 
 img, table {
